k8s-on-premise-cloud/OPA-GateKeeper/pod-rule/AllowedRegistries-Pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dis-allowed-registries-deployment
  namespace: test
  labels:
    app: dis-allowed-registries
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: dis-allowed-registries
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dis-allowed-registries
    spec:
      containers:
        - name: dis-allowed-registries
          image: ubuntu:22.04
          ports:
            - containerPort: 3002
              protocol: TCP  
              name: tcp
          resources:
            requests:
              memory: "256Mi"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
