k8s-on-premise-cloud/OPA-GateKeeper/pod-rule/K8sAtLeastOneLabel-Pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-no-labels
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
