k8s-on-premise-cloud/OPA-GateKeeper/pod-rule/K8sBlockedHostPath-Pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostpath-blocked-deployment
  namespace: test
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
        volumeMounts:
        - name: hostpath
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: hostpath
        hostPath:
          path: /
          type: Directory
