k8s-on-premise-cloud/OPA-GateKeeper/pod-rule/K8sRequiredResources-Pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-no-labels
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
