k8s-on-premise-cloud/OPA-GateKeeper/pod-rule/AllowedRegistries-Constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRegistries
metadata:
  name: allowed-registries
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps", "extensions"]
        kinds: ["Deployment", "ReplicaSet", "DaemonSet", "StatefulSet"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: ["movie-web", "test"]
  parameters:
    registries:
      - "nginx"
      - "docker.io/"
      - "dev.nhatanhdevops.website/onlineshop"
      - "ubuntu"
  validationFailureAction: enforce
