k8s-on-premise-cloud/OPA-GateKeeper/pod-rule/K8sAtLeastOneLabel-Constrant.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAtLeastOneLabel
metadata:
  name: pods-must-have-at-least-one-label
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: ["test","movie-web"]
  parameters:
    labels:
      - app
      - prodution
  validationFailureAction: enforce
