k8s-on-premise-cloud/OPA-GateKeeper/pod-rule/K8sBlockPrivileged-ConstraintTemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sblockprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sBlockPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockprivileged

        violation[{"msg": msg, "details": {}}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged
          msg := sprintf("Privileged mode is not allowed for container %v", [container.name])
        }

        violation[{"msg": msg, "details": {}}] {
          container := input.review.object.spec.initContainers[_]
          container.securityContext.privileged
          msg := sprintf("Privileged mode is not allowed for initContainer %v", [container.name])
        }
