k8s-on-premise-cloud/OPA-GateKeeper/pod-rule/K8sBlockedHostPath-Constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockHostPath
metadata:
  name: block-hostpath
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
    namespaceSelector:
      matchExpressions: 
        - key: kubernetes.io/metadata.name
          operator: In
          values: ["test","movie-web"]
  validationFailureAction: enforce
